Add Model, Repository, Service, and User Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
+# Configuration for database
 spring.datasource.url=jdbc:postgresql://localhost:5432/kafka
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.initialization-mode=never
 
-
+# Configuration for hibernate
 spring.jpa.database=postgresql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
@@ -12,10 +13,11 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
+# Configuration for flyway
 spring.flyway.locations=classpath:db/migration
 spring.flyway.enabled=true
 spring.flyway.url=jdbc:postgresql://localhost:5432/kafka
 spring.flyway.user=postgres
 spring.flyway.password=postgres
-spring.flyway.schemas=kafkaLearn
+spring.flyway.schemas=kafkaSchema
 spring.flyway.baselineOnMigrate=true
